--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
+    "@aws-amplify/ui-angular": "^5.0.29",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "angular-cli-ghpages": "^2.0.1",
+    "aws-amplify": "^6.6.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
