--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ABICCA-WEB": "node dist/abicca-web/server/server.mjs"
+    "serve:ssr:ABICCA-WEB": "node dist/abicca-web/server/server.mjs",
+    "deploy": "npx ng build && npx ngh --dir=docs/browser"
   },
   "private": true,
   "dependencies": {
