--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
     "@aws-amplify/ui-angular": "^5.0.29",
+    "@aws-sdk/client-dynamodb": "^3.678.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.678.0",
+    "@aws-sdk/util-dynamodb": "^3.678.0",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "angular-cli-ghpages": "^2.0.1",
