--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular-cli-ghpages": "^2.0.1",
     "aws-amplify": "^6.6.5",
     "express": "^4.18.2",
+    "ng2-completer": "^9.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
