--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /out-tsc
 /bazel-out
 
+
 # Node
 /node_modules
 npm-debug.log
@@ -45,3 +46,4 @@ Thumbs.db
 # Variaveis de Ambiente
 .env
 config.ts
+environments
