alterado campo notícia

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,16 @@
 {
     "cSpell.words": [
+        "botao",
+        "cabecalho",
+        "cartao",
+        "conteudo",
+        "descricao",
         "formulario",
+        "imagem",
         "noticia",
         "seja",
-        "Sobrenos"
+        "Sobrenos",
+        "titulo"
     ]
 
 }
