--- a/.github/workflows/build-deploy-ftp.yml
+++ b/.github/workflows/build-deploy-ftp.yml
@@ -27,10 +27,15 @@ jobs:
     - name: Build Angular project
       run: npm run build --if-present  # Executa o build do Angular
 
+    - name: Test FTP Connection (Debug)
+      run: |
+        echo "Testing FTP Connection..."
+        curl --ftp-create-dirs -u ${{ secrets.USER }}:${{ secrets.PASS }} ftp://${{ secrets.HOST }}/test.txt -T test.txt || echo "FTP connection failed"
+
     - name: FTP Deploy Locaweb
       uses: locaweb/ftp-deploy@1.0.0
       with:
         host: ${{ secrets.HOST }}
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
-        localDir: "docs/browser"  # Atualize com o nome correto da pasta gerada pelo build
+        localDir: "docs/browser"  # Ajustado para o localDir correto
